# Brain-Tumor

./: .gitignore  Graduation Project A - Mohamed Khaled.docx  Graduation Project A Presentation - Mohamed Khaled.pptx  README.md
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  errors.py  main.py  schemas.py
backend/app/ml/: __init__.py  classes.py  model.py  preprocess.py
backend/app/routers/: __init__.py  health.py  model_info.py  predict.py
backend/scripts/: train.py
backend/tests/: conftest.py  test_health.py  test_predict.py
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/braintumordetection/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
model/: requirements.txt
model/notebooks/: brain_tumor_colab.ipynb
model/scripts/: step1_preprocess.py  step2_upload.py  step5_evaluate.py
